Revision history for {{$dist->name}}

{{$NEXT}}
  - Update to the libuv v1.27.0 release

1.008     2019-02-07
  - Update to the libuv v1.25.0 release
  - Re-add the previously removed build flags for Windows

1.007     2019-01-13
  - Update to the libuv v1.24.1 release
  - Remove some unnecessary build flags
  - Add -msse2 flag

1.006     2018-08-28
  - Update to the libuv v1.23.0 release

1.005     2018-08-09
  - Don't even try to build on anything below Win7; It's broken.

1.004     2018-07-24
  - Update to the libuv v1.22.0 release
  - Deprecate all Windows versions prior to Windows 7 as per
    https://github.com/libuv/libuv/blob/v1.x/SUPPORTED_PLATFORMS.md
  - Switch to CMake when on Windows via Alien::cmake3
  - Add a missing -lshell32 library inclusion to the libs and static_libs
  - Add Perl 5.28 to the Strawberry tests on AppVeyor

1.003     2018-06-19
  - Update library inclusions for building with MinGW on Windows.
  - Add a contributing document.

1.002     2018-06-06
  - Update to the libuv v1.20.3 release

1.001     2018-04-15
  - Fix compiler flag typos for windows

1.000     2018-04-05
  - Update to the libuv v1.20.0 release
  - Bump to major version 1 to reflect same major version as libuv.
  - Update the alienfile to add the various libs needed on Win32
  - Update the alienfile to add the various cflags needed on Win32

0.017     2018-03-29
  - Update to the libuv v1.19.2 release

0.016     2018-01-29
  - Update to the libuv v1.19.1 release

0.015     2018-01-11
  - Update to the libuv v1.18.0 release

0.014     2017-11-27
  - Update to the libuv v1.17.0 release

0.013     2017-11-12
  - Update to the libuv v1.16.1 release

0.012     2017-10-03
  - Update to the libuv v1.15.0 release
  - Support for NetBSD

0.011     2017-09-06
  - Only require Alien::Autotools for a non-windows source build (Graham Ollis)
  - Update to the libuv v1.14.1 release.

0.010     2017-08-24
  - Production release with the changes from the three previous trial releases
